fix:problem with validator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>xSeti</title>
+    <title>xSetioff</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="main-container">
                 <div class="left-side">
-                    <div id="image"><img src="assets/img/image.jpg" alt="my photo"></div>
+                    <div id="image"><img class="poto" src="assets/img/image.jpg" alt="my photo"></div>
                     <section class="section" id="contacts">
                         <h2 class="section-title">
                             &nbsp;&nbsp;&nbsp;&nbsp;Contact information
@@ -49,13 +49,9 @@
                 <div class="right-side">
                     <section class="section" id="profile">
                         <h1>
-                            <p class="sectionR">
-                                Timofey Levchuk
-                            </p>
-                            <p class="sectionR1">
-                                Front-End developer
-                            </p>
+                            &nbsp;&nbsp;&nbsp;Timofey Levchuk
                         </h1>
+                        <p class="sectionR1">Front-End developer</p>
                     </section>
 
                     <section class="section" id="summary">
@@ -127,13 +123,11 @@
     <footer class="footerM">
         <div class="container">
             <ul class="footer">
-                <li class="ifooter"><a href="https://github.com/xSetioff"><img
-                            src="assets/img/logogithub.svg"
-                            alt="logoghub" width="40px" height="40px"></a></li>
+                <li class="ifooter"><a href="https://github.com/xSetioff"><img class="githublogof" src="assets/img/logogithub.svg"
+                            alt="logoghub"></a></li>
                 <li class="ifooter">2022</li>
-                <li class="ifooter"><a href="https://rs.school/js/"><img
-                    src="https://rs.school/images/rs_school_js.svg"
-                    alt="logoRSS" width="160px" height="40px"></a></li>
+                <li class="ifooter"><a href="https://rs.school/js/"><img class="rsslogof" src="https://rs.school/images/rs_school_js.svg"
+                            alt="logoRSS"></a></li>
             </ul>
         </div>
     </footer>
